samples/_failures_safe/1761082078_cc63ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29b88815.c: In function ‘main’:
./samples/SAFE/__tmp_29b88815.c:148:5: error: expected declaration or statement at end of input
  148 |     add_edge(&g, 4, 5, 3);
      |     ^~~~~~~~
